haciendo swagger noto que no está put de pds
