# backend/src/routes/review.routes.js
@@ -1,6 +1,7 @@
 import { Router } from "express";
 import { errorResponse, successfulResponse } from "../helpers/responses.helper.js";
 import ReviewService from "../services/review.service.js";
+import { verifyToken, validateRol } from "../middlewares/auth.middleware.js";
 
 
 export class ReviewRoute {
@@ -13,6 +14,26 @@ export class ReviewRoute {
     }
 
     #routes() {
+        this.#router.get("/reviewsOfProduct/:productId", async (req, res) => {
+            const { productId } = req.params;
+            const response = await this.#services.getReviewsByProductId(productId);
+            response.success
+            ?
+            response.reviews.length > 0 ? successfulResponse(res, 200, true, "Reviews of product", response.reviews) : successfulResponse(res, 200, false, "This product has no reviews", response.reviews)
+            :
+            errorResponse(res, response.error);
+        });
+
+        this.#router.get("/reviewsOfUser/:userId", [verifyToken, validateRol(1, 3)], async (req, res) => {
+            const { userId } = req.params;
+            const response = await this.#services.getReviewsByUserId(userId);
+            response.success
+            ?
+            response.reviews.length > 0 ? successfulResponse(res, 200, true, "Reviews of user", response.reviews) : successfulResponse(res, 200, true, "You don´t have any comments yet", response.reviews)
+            :
+            errorResponse(res, response.error);
+        });
+
         this.#router.get("/:id", async (req, res) => {
             const response = await this.#services.getReviewById(req.params.id);
             response.success
@@ -23,7 +44,8 @@ export class ReviewRoute {
         });
 
 
-        this.#router.post("/", async (req, res) => {
+        this.#router.post("/", [verifyToken, validateRol(1, 3)], async (req, res) => {
+            req.body.userID = req.payload.id;
             const response = await this.#services.createReview(req.body);
             response.success
             ?
@@ -32,9 +54,9 @@ export class ReviewRoute {
             errorResponse(res, response.error);
         });
 
-        this.#router.put("/:id", async (req, res) => {
+        this.#router.put("/:id", [verifyToken, validateRol(1, 3)], async (req, res) => {
             const { stars, title, comment } = req.body;
-            const response = await this.#services.updateReview(req.params.id, stars, title, comment);
+            const response = await this.#services.updateReview(req.params.id, stars, title, comment, req.payload.id);
             response.success
             ?
             successfulResponse(res, 200, true, "Review was successfully updated", response.review)
@@ -42,8 +64,8 @@ export class ReviewRoute {
             errorResponse(res, response.error);
         });
 
-        this.#router.delete("/:id", async (req, res) => {
-            const response = await this.#services.deleteReview(req.params.id);
+        this.#router.delete("/delete_review/:id", [verifyToken, validateRol(1, 3)], async (req, res) => {
+            const response = await this.#services.deleteReview(req.params.id,req.payload.id, req.payload.role);
             response.success
             ?
             successfulResponse(res, 200, true, "Review was successfully deleted")
